plugins {
    id 'com.android.application'
}

android {
    compileSdk 35

    defaultConfig {
        applicationId "net.berndreiss.zentodo"
        minSdk 34
        targetSdk 35
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
    }
    buildFeatures {
        viewBinding true
    }

    packagingOptions {
        exclude "META-INF/LICENSE.md"
        exclude "META-INF/NOTICE.md"
    }
    namespace 'net.berndreiss.zentodo'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(23))
    }
}

dependencies {

    implementation 'net.berndreiss.zentodo:api:1.0'
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.navigation:navigation-fragment:2.8.8'
    implementation 'androidx.navigation:navigation-ui:2.8.8'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'androidx.test.espresso:espresso-contrib:3.6.1'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
    androidTestImplementation 'androidx.test:runner:1.6.1'
    androidTestImplementation 'androidx.test:rules:1.6.1'
}